this will prevent overscroll on the table on mobile phone

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ table {
   border-radius: 10px;
   border-spacing: 0px;
   overflow: hidden;
+  overscroll-behavior: none;
 }
 
 thead {
